--- a/output/IR debug/makefile
+++ b/output/IR debug/makefile
@@ -16,7 +16,12 @@ RM := "$(GNU_Make_Install_DirEnv)/rm" -f
 -include subdir.mk
 -include output/PIR_No_CC/Sources/subdir.mk
 -include output/PIR_No_CC/Project_Settings/Startup_Code/subdir.mk
+-include output/PIR_No_CC/subdir.mk
 -include output/PIR_No_CC/Lib/subdir.mk
+-include output/PIR_CC/Sources/subdir.mk
+-include output/PIR_CC/Project_Settings/Startup_Code/subdir.mk
+-include output/PIR_CC/subdir.mk
+-include output/PIR_CC/Lib/subdir.mk
 -include output/IR/Sources/subdir.mk
 -include output/IR/Project_Settings/Startup_Code/subdir.mk
 -include output/IR/Lib/subdir.mk
